# python-module-example

./: README.md  main.py  pyproject.toml
src/calculator/: __init__.py  cal.py
tests/: test_calculator.py
