[project]
name = "calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JamesEe@MacBook", email = "james.ee.sg@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
